[package]
name = "workshop-rustlab-2022"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.5.13", default-features = false, features = ["http1", "query", "json"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
serde_with = "2.0.0"
tokio = { version = "1.20.1", features = ["macros", "time", "rt"] }
