[package]
name = "workshop-rustlab-2022"
version = "0.1.0"
edition = "2021"
default-run = "workshop-rustlab-2022"

[dependencies]
axum = { version = "0.5.13", default-features = false, features = ["http1", "query", "json", "tower-log"] }
rand = "0.8.5"
reqwest = { version = "0.11.11", default-features = false }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
serde_qs = { version = "0.10.1", features = ["axum"] }
serde_with = "2.0.0"
tokio = { version = "1.20.1", features = ["macros", "time", "rt"] }
tower-http = { version = "0.3.4", features = ["trace"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
